--- a/scss/layouts/_clubs.scss
+++ b/scss/layouts/_clubs.scss
@@ -72,10 +72,12 @@
     column-gap: 1rem;
     margin: 1rem 0;
     padding: 1rem;
-
+    align-items: center;
+    justify-content: center;
     input {
       width: 100%;
       border: 1px solid $color-midnightBlue;
+      height: 4rem;
     }
   }
 }
