--- a/scss/abstracts/_functions.scss
+++ b/scss/abstracts/_functions.scss
@@ -1,7 +1,32 @@
-/* FONT SIZE */
-@for $i from 1 through 6 {
-  // h#{$i} {font-size: 4rem - 0.5rem * ($i - 1);}
-  h#{$i} {font-size: clamp((3rem - 0.4rem * ($i - 1)), (3rem - 0.4rem * ($i - 1)) + (1vw - 0.1vw * $i), (4rem - 0.4rem * ($i - 1)));}
+@use 'sass:math';
+$default-min-bp: 320px;
+$default-max-bp: 960px;
+
+// set font size
+
+@function round($number, $decimals: 0) {
+  $n: 1;
+  @if $decimals > 0 {
+      @for $i from 1 through $decimals {
+          $n: $n * 10;
+      }
+  }
+  @return math.div(math.round($number * $n), $n);
+}
+
+// in _base file, set 62.5% font size, which is 10px
+@function px-to-rem($px) {
+  $rems: math.div($px, 10px) * 1rem;
+  @return $rems;
+}
+
+@function fluid($min-size, $max-size, $min-breakpoint: $default-min-bp, $max-breakpoint: $default-max-bp, $unit: vw) {
+  $slope: math.div($max-size - $min-size, $max-breakpoint - $min-breakpoint);
+  $slope-to-unit: round($slope * 100, 2);
+  $intercept-rem: round(px-to-rem($min-size - $slope * $min-breakpoint), 2);
+  $min-size-rem: round(px-to-rem($min-size), 2);
+  $max-size-rem: round(px-to-rem($max-size), 2);
+  @return clamp(#{$min-size-rem}, #{$slope-to-unit}#{$unit} + #{$intercept-rem}, #{$max-size-rem});
 }
 
 // set text color
