--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6 {
 
 p, blockquote {
   font-family: $font-titillium, sans-serif;
-  font-size: 1.8rem;
+  font-size: fluid(16px,18px);
   margin: 1.2rem 0;
 }
 
@@ -33,8 +33,32 @@ blockquote {
   font-style: italic;
 }
 
-li {
-  font-size: 1.6rem;
+h1 {
+  font-size: fluid(28px,40px);
+}
+h2 {
+  font-size: fluid(25px,32px);
+}
+h3 {
+  font-size: fluid(22px,28px);
+}
+h4 {
+  font-size: fluid(18px,24px);
+}
+h5 {
+  font-size: fluid(14px,20px);
+}
+h6 {
+  font-size: fluid(16px,18px);
+}
+
+table {
+  font-size: fluid(12px,18px);
+}
+
+
+li,label {
+  font-size: fluid(14px,18px);
 }
 
 a {
