--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -26,7 +26,7 @@ p, blockquote {
 
 form select, form input, textarea {
   font-family: $font-titillium, sans-serif;
-  font-size: 1.5rem;
+  font-size: fluid(14px,18px);
 }
 
 blockquote {
