--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,7 +73,7 @@ p, blockquote {
 
 form select, form input, textarea {
   font-family: "Titillium Web", sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(1.4rem, 0.63vw + 1.2rem, 1.8rem);
 }
 
 blockquote {
