--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,5 +2,5 @@
 @forward '../components/icons';
 @forward '../components/buttons';
 @forward '../components/containers';
-@forward '../components/header';
+@forward '../components/nav';
 @forward '../components/footer';
