--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -63,9 +63,10 @@ form.contact-form {
   .form-control {
     display: flex;
     flex-direction: column;
+    margin-bottom: 1rem;
     .ff-wrapper {
       position: relative;
-      margin-top: 0.5rem;
+      // margin-top: 0.5rem;
       .ff-icon {
         position: absolute;
         top: 0.6rem;
@@ -81,16 +82,21 @@ form.contact-form {
   .form-control {
     &.agree-privacy-checkbox,
     &.consent-marketing {
-      display: grid!important;
-      grid-template-columns: 5% 95%;
+      // display: grid!important;
+      // grid-template-columns: 5% 95%;
+      display: flex;
+      flex-direction: row;
       text-align: left!important;
       margin: 0.5rem auto;
       input[type="checkbox"] {
         width: 2rem;
       }
+      .checkboxlabel-group {
+        margin: 0;
+      }
       label {
-        vertical-align: middle;
-        margin: auto 0;
+        // vertical-align: middle;
+        // margin: auto 0;
         &.checkbox-text {
           font-size: 1.5rem;
           padding-left: 1rem;
