--- a/scss/fontawesome.scss
+++ b/scss/fontawesome.scss
@@ -1,3 +1,7 @@
-@use '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
-@use '../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
-@use '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
+
+.fa-rotate-by {
+  transform: rotate(var(--fa-rotate-angle, 0));
+}
